# BITOKI

./: .env.example  .gitignore  BINANCE_SETUP_AFRICA.md  CLAUDE.md  Dockerfile  LAUNCH_GUIDE.md  MONEY_MAKING_GUIDE.md  PASSKEY_SETUP.md  PRODUCTION_QUICK_START.md  PRODUCTION_ROADMAP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RENDER_DEPLOYMENT.md  SECURITY_GUIDE.md  SETUP.md  START_HERE.md  START_TRADING_NOW.md  WEB_APP_README.md  admin_clear_db.py  app.py  app_prod.py  auth.py  auth.py.backup  build.sh  check_db_type.py  clear_production_users.py  clear_users.py  cookies.txt  create_passkey_tables.py  docker-compose.prod.yml  fix_db_schema.py  fix_production_db.py  init_db.py  install.bat  install.sh  models.py  models_passkey.py  paystack.py  pyproject.toml  (+11 more)
api/: __init__.py  giftcard.py  trading.py  wallet.py
config/: email_config.yaml  local_config.yaml  production_config.yaml  strategy_config.yaml
docs/: index.md  installation.md
migrations/: add_passkey_tables.sql
migrations/versions/: aecd7b3fa90d_add_password_reset_fields_to_users_table.py  e8c0bc300fe1_add_email_verification_and_password_.py
nginx/: nginx.conf
routes/: ngn_wallet.py  passkey.py
services/: email_service.py  passkey_service.py  paystack_service.py
sql/: init.sql
src/bitoki/: __init__.py  config.py  main.py  strategy.py
src/bitoki/data/: __init__.py  market_data.py  news.py
src/bitoki/patterns/: __init__.py  (+2 more)
web/templates/: base.html  contact.html  dashboard.html  faq.html  giftcards.html  index.html  savings.html  security.html  settings.html  trade.html  wallet.html
(+29 files in other folders)
